# Numpyviewer

./: .gitignore  CMakeLists.txt  README.md  appicon.rc  cnpy.cpp  cnpy.h  colormap.h  convertwindow.cpp  convertwindow.h  convertwindow.ui  cubeviewer.pro  envi_parser.cpp  envi_parser.h  graphics_view_zoom.h  histogram.cpp  histogram.h  histogram.ui  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  numpyviewer.pro  recycling.icns  setup.iss  snapcraft.yaml  version.txt
artwork/: icon.icns
snap/gui/: numpyviewer.desktop
src/: INIReader.cpp  INIReader.h  cnpy.cpp  cnpy.h  colormap.cpp  colormap.h  convertwindow.cpp  convertwindow.h  envi_parser.cpp  envi_parser.h  filedownloader.cpp  filedownloader.h  graphics_view_zoom.cpp  graphics_view_zoom.h  histogram.cpp  histogram.h  ini.c  ini.h  keyeventhandler.cpp  keyeventhandler.h  main.cpp  mainwindow.cpp  mainwindow.h
